removed coord stuff

--- a/examples/app_lores_DAS_fixed/.cproject
+++ b/examples/app_lores_DAS_fixed/.cproject
@@ -221,6 +221,8 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array_board_support/doc}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array/doc/pdf}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array/src/coord}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array/src/coord/sine_gen}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array/src/coord/sine_lut}&quot;"/>
 								</option>
 								<inputType id="com.xmos.cdt.xc.compiler.input.505416709" name="XC" superClass="com.xmos.cdt.xc.compiler.input"/>
 							</tool>
@@ -569,6 +571,8 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array_board_support/doc}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array/doc/pdf}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array/src/coord}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array/src/coord/sine_gen}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array/src/coord/sine_lut}&quot;"/>
 								</option>
 								<inputType id="com.xmos.cdt.c.compiler.input.c.1590139567" name="C" superClass="com.xmos.cdt.c.compiler.input.c"/>
 							</tool>
@@ -923,6 +927,8 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array_board_support/doc}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array/doc/pdf}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array/src/coord}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array/src/coord/sine_gen}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array/src/coord/sine_lut}&quot;"/>
 								</option>
 								<inputType id="com.xmos.cdt.cxx.compiler.input.cpp.798953824" name="C++" superClass="com.xmos.cdt.cxx.compiler.input.cpp"/>
 							</tool>
