--- a/examples/app_mic_calibration/.cproject
+++ b/examples/app_mic_calibration/.cproject
@@ -204,6 +204,8 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array_board_support/src}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array_board_support/doc/rst}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array/src/coord}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array/src/coord/sine_gen}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array/src/coord/sine_lut}&quot;"/>
 								</option>
 								<inputType id="com.xmos.cdt.xc.compiler.input.1374662890" name="XC" superClass="com.xmos.cdt.xc.compiler.input"/>
 							</tool>
@@ -535,6 +537,8 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array_board_support/src}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array_board_support/doc/rst}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array/src/coord}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array/src/coord/sine_gen}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array/src/coord/sine_lut}&quot;"/>
 								</option>
 								<inputType id="com.xmos.cdt.c.compiler.input.c.362514034" name="C" superClass="com.xmos.cdt.c.compiler.input.c"/>
 							</tool>
@@ -872,6 +876,8 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array_board_support/src}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array_board_support/doc/rst}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array/src/coord}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array/src/coord/sine_gen}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array/src/coord/sine_lut}&quot;"/>
 								</option>
 								<inputType id="com.xmos.cdt.cxx.compiler.input.cpp.237264808" name="C++" superClass="com.xmos.cdt.cxx.compiler.input.cpp"/>
 							</tool>
