--- a/examples/app_hires_DAS_fixed/.cproject
+++ b/examples/app_hires_DAS_fixed/.cproject
@@ -218,6 +218,8 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_i2s/lib_i2s/doc/rst}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_i2s/lib_i2s/api}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array/src/coord}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array/src/coord/sine_gen}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array/src/coord/sine_lut}&quot;"/>
 								</option>
 								<inputType id="com.xmos.cdt.xc.compiler.input.74055339" name="XC" superClass="com.xmos.cdt.xc.compiler.input"/>
 							</tool>
@@ -563,6 +565,8 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_i2s/lib_i2s/doc/rst}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_i2s/lib_i2s/api}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array/src/coord}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array/src/coord/sine_gen}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array/src/coord/sine_lut}&quot;"/>
 								</option>
 								<inputType id="com.xmos.cdt.c.compiler.input.c.964068649" name="C" superClass="com.xmos.cdt.c.compiler.input.c"/>
 							</tool>
@@ -914,6 +918,8 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_i2s/lib_i2s/doc/rst}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_i2s/lib_i2s/api}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array/src/coord}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array/src/coord/sine_gen}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array/src/coord/sine_lut}&quot;"/>
 								</option>
 								<inputType id="com.xmos.cdt.cxx.compiler.input.cpp.317483397" name="C++" superClass="com.xmos.cdt.cxx.compiler.input.cpp"/>
 							</tool>
