added appnotes for examples to be viewed externally plus sorted the name of app_hires_DAS

--- a/examples/app_hires_DAS_fixed/.project
+++ b/examples/app_hires_DAS_fixed/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>example_hires_DAS_fixed</name>
+	<name>app_hires_DAS_fixed</name>
 	<comment></comment>
 	<projects>
 	</projects>
